src/components/Container/Container.scss
body {
  position: relative;
  font-family: 'Muli', sans-serif;
  cursor: none;
  margin: 0;

  a {
    cursor: none;
  }

  .global-container {
    position: relative;
    width: 100%;
    height: 100vh;

    .home {
      position: absolute;
      width: 100%;
      height: 100vh;
      left: 0;
      top: 0;
    }
  }
}

